# crmsh

./: .coveragerc  .gitignore  .hgignore  .hgsigs  .landscape.yaml  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  Makefile  Makefile.am  README  README.dev  README.md  TODO  autogen.sh  codecov.yml  configure.ac  crm  crm.conf.in  crmsh-cibadmin_can_patch.patch  crmsh.changes.in  crmsh.spec  crmsh.spec.in  crmsh.tmpfiles.d.conf  data-manifest  high-availability.xml  meson.build  meson_install_data.py  meson_options.txt  pylint.toml  pytest.ini  requirements.txt  setup.py  tox.ini  update-data-manifest.sh  version.in
.github/workflows/: crmsh-cd.yml  crmsh-ci.yml  python-app.yml  python-package.yml  test-container-image.yml
.obs/: workflows.yml
checks/: ansible.cfg  check.yml
checks/callback_plugins/: crmsh_callback.py
contrib/: Makefile.am  README.vimsyntax  bash_completion.sh  git-hook-pre-commit  pacemaker-crm.vim  pcmk-ftdetect.vim  setup.py
contrib/pygments_crmsh_lexers/: __init__.py  ansiclr.py  crmsh.py
crmsh/: bootstrap.py  bootstrap_lock.py  build_config.py  build_config.py.in  cache.py  cibconfig.py  cibquery.py  cibstatus.py  cibverify.py  clidisplay.py  cliformat.py  cluster_fs.py  cmd_status.py  command.py  completers.py  conf_parser.py  config.py  constants.py  corosync.py  corosync_config_format.py  crm_gv.py  crm_pssh.py  handles.py  healthcheck.py  help.py  history.py  idmgmt.py  iproute2.py  join_lock.py  lock.py  log.py  log_patterns.py  logparser.py  logtime.py  main.py  migration-supported-resource-agents.txt  migration-unsupported-resource-agents.txt  migration.py  minieval.py  msg.py  (+53 more)
crmsh/crash_test/: check.py  config.py  main.py  task.py  utils.py
crmsh/preflight_check/: check.py  main.py  task.py
doc/: Makefile  Makefile.am  Makefile.www  about.txt  bootstrap-howto.md  bootstrap-todo.md  configuration.txt  crm.1.2.6.txt  crm.8.adoc  crm.8.txt  crm.conf  crmsh2-vision-2.txt  crmsh2-vision.txt  crmsh_crm_report.8.adoc  crmsh_hb_report.8.adoc  crmsh_hb_report.8.txt  development.md  development.txt  documentation.txt  faq.txt  hb_report.8.txt  history-tutorial.txt  index.txt  postprocess.py  profiles.adoc  releasing-a-new-version.md  rsctest-tutorial.txt  scripts.txt  sort-doc.py  tutorials.txt
doc/css/: crm.css
doc/js/: FeedEk.js
doc/toolchain/: Containerfile
doc/toolchain/lib/help2adoc/: generator.py  main.py  parser.py
doc/website-v1/: .gitignore  404.txt  Makefile  about.adoc  about.txt  access.txt  configuration.adoc  crm.conf  crmold.conf  development.adoc  development.txt  documentation.adoc  documentation.txt  download.adoc  faq.adoc  faq.txt  history-guide.adoc  index.adoc  index.txt  installation.adoc  installation.txt  make-news.py  man-1.2.adoc  man-2.0.adoc  man-2.0.txt  man-3.adoc  man-4.3.adoc  man-4.6.adoc  man-5.0.adoc  news.adoc  postprocess.py  rsctest-guide.txt  scripts.adoc  scripts.txt  start-guide.adoc  start-guide.txt  tutorials.txt
doc/website-v1/css/: crm.css
doc/website-v1/include/history-guide/: basic-transition.typescript  diff.typescript  info.typescript  nfs-probe-err.typescript  resource-trace.typescript  resource.typescript  sample-cluster.conf.crm  status-probe-fail.typescript  stonith-corosync-stopped.typescript  transition-log.typescript
doc/website-v1/news/: 2014-06-30-release-2_1.adoc  2014-06-30-release-2_1.txt  2014-10-28-release-2_1_1.adoc  2015-01-26-release-2_1_2.adoc  2015-04-10-release-2_1_3.adoc  2015-05-13-release-2_1_4.adoc  2015-05-25-getting-started-jp.adoc  2016-01-12-release-2_1_5.adoc  2016-01-15-release-2_2_0.adoc  2016-04-28-release-2_2_1.adoc  2016-08-12-release-2_3_0.adoc  2016-09-01-release-2_1_7.adoc  2016-09-02-release-2_3_1.adoc  2016-09-05-release-2_2_2.adoc  2017-01-31-release-3_0_0.adoc  2017-07-21-release-3_0_1.adoc  2021-06-17-release-4_3_1.adoc
etc/: crm.conf.in  profiles.yml
hb_report/: Makefile.am  README.md  collect.py  combine-logs.pl  const.py  constants.py  core.py  corosync_conf_support.py  envir.py  ha_cf_support.py  ha_cf_support.sh  hb_report  hb_report.8  hb_report.8.txt  hb_report.html  hb_report.in  hb_report.xml.in  info.py  master.py  openais_conf_support.sh  utillib.py  utillib.sh  utils.py
modules/: Makefile.am  cache.py  cibconfig.py  cibobjects.py  cibstatus.py  cibverify.py  clidisplay.py  cliformat.py  cmd_status.py  command.py  completers.py  completion.py  config.py  config.py.in  constants.py  corosync.py  crm_gv.py  crm_pssh.py  handles.py  help.py  help.py.in  history.py  idmgmt.py  levels.py  log_patterns.py  log_patterns_118.py  logparser.py  logtime.py  main.py  msg.py  options.py  ordereddict.py  orderedset.py  pacemaker.py  parse.py  ra.py  ra.py.in  rcfile.py  report.py  rsctest.py  (+36 more)
preflight_check/: README.md  check.py  config.py  explain.py  ha-cluster-preflight-check  main.py  task.py  utils.py
python_hb_report/: README.md  collector.py  corosync_conf_support.py  envir.py  hb_report  master.py  node.py  utillib.py
rescript/: agents.yml  example.yml  nfsserver_2_0.xml  scripts-2.0.md  scripts2.md  scripts_2_0.yml  scripts_2_0_nfsserver.yml  scripts_2_0_simplestack.yml
scripts/: Makefile.am
templates/: Makefile.am  apache  clvm  filesystem  gfs2  gfs2-base  ocfs2  sbd  virtual-ip
test/: Makefile.am  README.regression  bugs-test.txt  cib-tests.sh  containerized-regression-tests.sh  crm-interface  descriptions  docker_scripts.sh  evaltest.sh  history-test.tar.bz2  list-undocumented-commands.py  profile-history.sh  regression.sh  run  run-functional-tests  run-in-container.sh  run-in-travis.sh  trace_access.bt  travis-ci-fix.patch  travis-expected-pacemaker-1.1.12.patch  travis-tests.sh  unit-tests-in-container.sh  unit-tests.sh  update-expected-output.sh
test/cibtests/: 001.exp.xml  001.input  002.exp.xml  002.input  003.exp.xml  003.input  004.exp.xml  004.input  Makefile.am  shadow.base
test_container/: Dockerfile  behave-agent.socket  behave-agent@.service  behave_agent.py
utils/: Makefile.am  crm_clean.py  crm_init.py  crm_pkg.py  crm_rpmcheck.py  crm_script.py  hahealth  package
(+331 files in other folders)
