option('package_version', type: 'string', value: '', description: 'Override package version')
option('package_name', type: 'string', value: '', description: 'Override package name')
option('ocf_root', type: 'string', value: '/usr/lib/ocf', description: 'Directory for OCF scripts')
option('daemon_user', type: 'string', value: 'hacluster', description: 'User to run privileged non-root things as')
option('tmpfilesdir', type: 'string', value: '/lib/tmpfiles.d', description: 'Systemd tmpfiles configuration path')
option('fwdefdir', type: 'string', value: '/usr/lib/firewalld/services', description: 'Destination directory for Firewalld XML profiles')
